# image-render-automation

./: .gitignore  NOTICE.md  README.md  setup.cfg
docs/source/: action_main.md  conf.py  config_proc.md  index.rst  workspace_basics.md
docs/source/products/: analyze.md  categorize.md
docs/source/reference/: launch.md  main.md
docs/source/workspace/: basics.md  level-1.md
src/catharsys/action/: __init__.py  cls_actionclass_executor.py  cls_actionfactory.py  job.py  util.py
src/catharsys/action/cmd/: __init__.py  prod_analyze.py  prod_analyze_impl.py  prod_export.py  prod_export_impl.py  prod_main.py  prod_scan.py  prod_scan_impl.py  ws_copy.py  ws_impl.py  (+7 more)
src/catharsys/api/: __init__.py  cls_action.py  cls_action_result_data.py  cls_project.py  cls_result_data.py  cls_variant_group.py  cls_variants.py  cls_workspace.py
src/catharsys/config/: __init__.py  cls_config_list.py  cls_exec_job.py  cls_exec_lsf.py  cls_job.py  cls_launch.py  cls_project.py  cls_trial_actions.py  cls_trial_set.py  cls_variant_group.py  cls_variant_instance.py  cls_variant_launch.py  cls_variant_project.py  cls_variant_trial.py
src/catharsys/decs/: __init__.py  decorator_ep.py  decorator_log.py
src/catharsys/util/: __init__.py  cls_configcml.py  cls_entrypoint_categories.py  cls_entrypoint_information.py  config.py  configcml_func_std.py  data.py  exception.py  file.py  fsops.py  lsf.py  opsys.py  path.py  version.py
src/dev/: dev-act-handler-01.py  dev-configure-01.py  dev-configure-02.py  dev_api_ison.py  dev_ison.ipynb  xtar-export.py
src/testing/: test_view_dim_node_path.py
(+32 files in other folders)
