[metadata]
name = image-render-automation
version = attr: catharsys.util.version.__version__

[options]
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src
exclude = dev, testing

[options.entry_points]
catharsys.commands =
    ws = catharsys.action.cmd.ws_main
    inspect = catharsys.util.cmd.inspect
    prod = catharsys.action.cmd.prod_main
    
catharsys.commands.workspace =
    launch = catharsys.action.cmd.ws_launch
    info = catharsys.action.cmd.ws_info
    copy = catharsys.action.cmd.ws_copy

catharsys.commands.workspace.copy =
    config = catharsys.action.cmd.ws_copy_config
    
catharsys.commands.products = 
    scan = catharsys.action.cmd.prod_scan
    ana = catharsys.action.cmd.prod_analyze
    analyze = catharsys.action.cmd.prod_analyze
    export = catharsys.action.cmd.prod_export

catharsys.actionclass =
    /catharsys/action-class/python/manifest-based/class:2.0 = catharsys.plugins.std.action_class.manifest.cls_executor:CActionClassManifestExecutor

catharsys.action_handler.executors =
    /catharsys/action-handler/executor/std:1.0 = catharsys.api.action.cls_action_executor_std:CActionExecutorStd
    /catharsys/action-handler/executor/lsf:1.0 = catharsys.api.action.cls_action_executor_lsf:CActionExecutorLsf
